Updated code to JDK 1.5
git-svn-id: http://svn.marvelution.com/atlassian/jira-hudson-integration/trunk@1684 079872ed-eb71-41de-a42c-5a92345b582c