@@ -60,7 +60,7 @@ public class SuccessFailureRenderer extends XYBarRenderer implements XYToolTipGe
 	 */
 	@Override
 	public Paint getItemPaint(int row, int column) {
-		final Integer columnKey = new Integer(new Double(getPlot().getDataset().getXValue(0, column)).intValue());
+		final Integer columnKey = Integer.valueOf(Double.valueOf(getPlot().getDataset().getXValue(0, column)).intValue());
 		final Build build = buildsMap.get(columnKey);
 		if (Result.SUCCESS.equals(build.getResult())) {
 			return ChartUtils.GREEN_OUTLINE;
@@ -75,7 +75,7 @@ public class SuccessFailureRenderer extends XYBarRenderer implements XYToolTipGe
 	 */
 	@Override
 	public Paint getItemOutlinePaint(int row, int column) {
-		final Integer columnKey = new Integer(new Double(getPlot().getDataset().getXValue(0, column)).intValue());
+		final Integer columnKey = Integer.valueOf(Double.valueOf(getPlot().getDataset().getXValue(0, column)).intValue());
 		final Build build = buildsMap.get(columnKey);
 		if (Result.SUCCESS.equals(build.getResult())) {
 			return ChartUtils.GREEN_OUTLINE;
@@ -88,9 +88,8 @@ public class SuccessFailureRenderer extends XYBarRenderer implements XYToolTipGe
 	/**
 	 * {@inheritDoc}
 	 */
-	@Override
 	public String generateToolTip(XYDataset dataset, int row, int column) {
-		final Integer buildNumber = new Integer(new Double(dataset.getXValue(0, column)).intValue());
+		final Integer buildNumber = Integer.valueOf(Double.valueOf(dataset.getXValue(0, column)).intValue());
 	    final Build build = buildsMap.get(buildNumber);
 		return "Build: " + build.getNumber() + " - " + build.getResult().name();
 	}
@@ -98,9 +97,8 @@ public class SuccessFailureRenderer extends XYBarRenderer implements XYToolTipGe
 	/**
 	 * {@inheritDoc}
 	 */
-	@Override
 	public String generateURL(XYDataset dataset, int row, int column) {
-		final Integer buildNumber = new Integer(new Double(dataset.getXValue(0, column)).intValue());
+		final Integer buildNumber = Integer.valueOf(Double.valueOf(dataset.getXValue(0, column)).intValue());
 	    final Build build = buildsMap.get(buildNumber);
 		return server.getHost() + "/" + build.getUrl();
 	}
